fix: fix scrollbar jumping

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -9,6 +9,7 @@
 }
 
 html {
+  overflow-y: scroll;
   box-sizing: border-box;
 }
 
